[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
name = "chobugo"
version = "0.1.0"
description = ""
authors = ["Yejun Kim <662691-hpthrd@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.22.0"
python-dotenv = "^1.0.1"
scipy = "1.14.1"
boto3 = "1.35.76"
sanic = "^24.12.0"
uvicorn = "^0.34.0"
aiohttp = "^3.11.11"
ruff = "^0.9.1"
pre-commit = "^4.0.1"
requests = "2.32.3"
nest-asyncio = "^1.6.0"
slack-sdk = "^3.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4
ignore = ["F401", "F841"]
